2022-01-15  Andreas Scherer  <https://ascherer.github.io>

	* comm-pc.ch,
	* comm-w2c.h,
	* common.c,
	* common.h,
	* ctang-bs.ch,
	* ctang-pc.ch,
	* ctang-w2c.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-w2c.ch,
	* cweav-pc.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* cwebman.tex,
	* cwebman-w2c.ch,
	* po/cweb.pot,
	* po/de/cweb.po,
	* po/it/cweb.po: Increase sizes in CWEB 4.6.1.

2021-12-26  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-{mac,mini,ql,w2c}.ch,
	* comm-w2c.h,
	* common.h,
	* common.w,
	* ctang-{bs,pc,ql,vms,w2c,w32}.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-{mini,w2c}.ch,
	* cweav-{bs,pc,ql,vms,w2c,w32}.ch,
	* cweave.w,
	* cwebmac.tex,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* po/cweb-tl.pot,
	* po/cweb.pot,
	* po/de/cweb-tl.po,
	* po/de/cweb.po,
	* po/it/cweb.po,
	* prod-{cweave,twill}.w,
	* prod.w: CWEB 4.6 and CWEBbin 2021.6 release.

2021-12-20  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.h,
	* ctwill-mini.ch: Reshuffle 'gettext' header.

2021-12-05  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* ctwill-mini.ch,
	* ctwill-w2c.ch,
	* cwebman-w2c.ch: Active link to the CTWILL user manual.

2021-11-26  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch,
	* cweave.w: Reshuffle code in CWEAVE.

2021-11-22  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-w2c.h,
	* common.h: Copyright text in common interface.

2021-11-14  Andreas Scherer  <https://ascherer.github.io>

	* comm-w2c.ch,
	* po/cweb-tl.pot,
	* po/de/cweb-tl.po: More generic point of interest.

2021-11-12  Andreas Scherer  <https://ascherer.github.io>

	* ctangle.w,
	* cweave.w: Consistently refer to the COMMON module.

2021-10-31  Andreas Scherer  <https://ascherer.github.io>

	* ctproofmac.tex,
	* cttwinxmac.tex,
	* ctwill-mini.ch,
	* ctwimac.tex,
	* cweave.w,
	* cwebmac.tex,
	* cwebman.tex,
	* texinputs/pdfctwimac.tex: Restore '\T' macro backward compatibility.
